--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "bootstrap-social": "^5.1.1",
     "font-awesome": "^4.7.0",
     "jwt-decode": "^2.2.0",
+    "mdbreact": "^4.27.0",
     "node-sass": "^4.14.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
